// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 14,
            "flex": 0.4,
            "justifyContent": "space-around",
            "paddingHorizontal": 14,
            "paddingVertical": 40,
            "width": "80%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 32,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                          "justifyContent": "flex-end",
                          "margin": 0,
                          "padding": 25,
                          "position": "absolute",
                          "right": -20,
                          "top": -70,
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlign": "center",
            }
          }
        >
          recusandae ut nulla
        </Text>
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          ut libero qui
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="AnnouncementActionButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#007398",
                  "fontSize": 14,
                  "height": 48,
                  "letterSpacing": 1.5,
                  "lineHeight": 24,
                  "width": 600,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                    "lineHeight": 18,
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  },
                  Object {},
                ]
              }
            >
              QUAM IPSAM NOBIS
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="AnnouncementActionButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#007398",
                  "fontSize": 14,
                  "height": 48,
                  "letterSpacing": 1.5,
                  "lineHeight": 24,
                  "width": 600,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                    "lineHeight": 18,
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  },
                  Object {},
                ]
              }
            >
              SED LIBERO REPUDIANDAE
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          Object {
            "elevation": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="menuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "et porro ut",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 20,
                    "height": 42,
                    "width": 42,
                  },
                  Object {
                    "backgroundColor": "rgb(127, 155, 180)",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              },
            ]
          }
        >
          People
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <SvgMock />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Person",
          "firstName": "Hayden",
          "fullName": "Clotilde Sanford",
          "id": "1",
          "lastName": "Zieme",
          "picture": "et porro ut",
          "relationshipType": "neighbor",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "ut sunt qui",
            "id": "2",
            "name": "corporis repellat ratione",
            "position": 18626,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 38791,
            },
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "paddingVertical": 6,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Hayden",
              "fullName": "Clotilde Sanford",
              "id": "1",
              "lastName": "Zieme",
              "picture": "et porro ut",
              "relationshipType": "neighbor",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "ut sunt qui",
                "id": "2",
                "name": "corporis repellat ratione",
                "position": 18626,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 38791,
                },
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textTransform": "uppercase",
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          TAKE A STEP WITH SOMEONE
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with people correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 14,
            "flex": 0.4,
            "justifyContent": "space-around",
            "paddingHorizontal": 14,
            "paddingVertical": 40,
            "width": "80%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 32,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                          "justifyContent": "flex-end",
                          "margin": 0,
                          "padding": 25,
                          "position": "absolute",
                          "right": -20,
                          "top": -70,
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "SourceSansPro-Light",
              "fontSize": 24,
              "fontStyle": "normal",
              "fontWeight": "300",
              "lineHeight": 30,
              "textAlign": "center",
            }
          }
        >
          et dolorum architecto
        </Text>
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          delectus aut nam
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="AnnouncementActionButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#007398",
                  "fontSize": 14,
                  "height": 48,
                  "letterSpacing": 1.5,
                  "lineHeight": 24,
                  "width": 600,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                    "lineHeight": 18,
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  },
                  Object {},
                ]
              }
            >
              FUGIT REPELLENDUS HIC
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="AnnouncementActionButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#007398",
                  "fontSize": 14,
                  "height": 48,
                  "letterSpacing": 1.5,
                  "lineHeight": 24,
                  "width": 600,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                    "lineHeight": 18,
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  },
                  Object {},
                ]
              }
            >
              VEL LABORE OMNIS
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          Object {
            "elevation": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="menuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "voluptas culpa non",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 20,
                    "height": 42,
                    "width": 42,
                  },
                  Object {
                    "backgroundColor": "rgb(154, 123, 115)",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 20,
              },
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              },
            ]
          }
        >
          People
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="Button"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <SvgMock />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Person",
          "firstName": "Hayden",
          "fullName": "Lexie Cremin",
          "id": "1",
          "lastName": "Zieme",
          "picture": "voluptas culpa non",
          "relationshipType": "neighbor",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "ut sunt qui",
            "id": "2",
            "name": "corporis repellat ratione",
            "position": 18626,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 38791,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Ezequiel",
          "fullName": "Ezequiel Ortiz",
          "id": "3",
          "lastName": "Ortiz",
          "picture": "enim ipsum inventore",
          "relationshipType": "coworker",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "deserunt quam tempore",
            "id": "4",
            "name": "debitis libero aspernatur",
            "position": 95788,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 41178,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Gracie",
          "fullName": "Gracie Weber",
          "id": "5",
          "lastName": "Weber",
          "picture": "velit eligendi nostrum",
          "relationshipType": "friend",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "repellendus fugiat velit",
            "id": "6",
            "name": "ipsam qui nobis",
            "position": 1828,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 3417,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Kali",
          "fullName": "Kali Stamm",
          "id": "7",
          "lastName": "Stamm",
          "picture": "fuga doloribus distinctio",
          "relationshipType": "neighbor",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "ducimus temporibus modi",
            "id": "8",
            "name": "placeat ullam minima",
            "position": 10322,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 7336,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Heather",
          "fullName": "Heather Hahn",
          "id": "9",
          "lastName": "Hahn",
          "picture": "totam voluptates explicabo",
          "relationshipType": "friend",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "sed magni cupiditate",
            "id": "10",
            "name": "exercitationem ut quis",
            "position": 1936,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 8362,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Marlene",
          "fullName": "Marlene Ledner",
          "id": "11",
          "lastName": "Ledner",
          "picture": "sint non voluptates",
          "relationshipType": "neighbor",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "qui illo error",
            "id": "12",
            "name": "ut ullam quos",
            "position": 57411,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 61393,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Connor",
          "fullName": "Connor Kihn",
          "id": "13",
          "lastName": "Kihn",
          "picture": "a officia quaerat",
          "relationshipType": "coworker",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "provident esse hic",
            "id": "14",
            "name": "cumque incidunt aut",
            "position": 69440,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 49305,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Shad",
          "fullName": "Shad Farrell",
          "id": "15",
          "lastName": "Farrell",
          "picture": "ut ab voluptas",
          "relationshipType": "friend",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "eos sint autem",
            "id": "16",
            "name": "sed quae nam",
            "position": 94459,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 2980,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Alek",
          "fullName": "Alek Lesch",
          "id": "17",
          "lastName": "Lesch",
          "picture": "aut ut ut",
          "relationshipType": "friend",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "saepe consequatur vel",
            "id": "18",
            "name": "eos ducimus eos",
            "position": 39767,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 53842,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Marco",
          "fullName": "Marco Volkman",
          "id": "19",
          "lastName": "Volkman",
          "picture": "et molestiae ea",
          "relationshipType": "coworker",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "quidem est consequuntur",
            "id": "20",
            "name": "ut sunt placeat",
            "position": 88330,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 69020,
            },
          },
        },
        Object {
          "__typename": "Person",
          "firstName": "Haylee",
          "fullName": "Haylee Klocko",
          "id": "21",
          "lastName": "Klocko",
          "picture": "est placeat ex",
          "relationshipType": "neighbor",
          "stage": Object {
            "__typename": "Stage",
            "iconUrl": "ex eveniet facere",
            "id": "22",
            "name": "ut voluptas enim",
            "position": 42809,
          },
          "steps": Object {
            "__typename": "StepConnection",
            "pageInfo": Object {
              "__typename": "BasePageInfo",
              "totalCount": 88134,
            },
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "paddingVertical": 6,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Hayden",
              "fullName": "Lexie Cremin",
              "id": "1",
              "lastName": "Zieme",
              "picture": "voluptas culpa non",
              "relationshipType": "neighbor",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "ut sunt qui",
                "id": "2",
                "name": "corporis repellat ratione",
                "position": 18626,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 38791,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Ezequiel",
              "fullName": "Ezequiel Ortiz",
              "id": "3",
              "lastName": "Ortiz",
              "picture": "enim ipsum inventore",
              "relationshipType": "coworker",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "deserunt quam tempore",
                "id": "4",
                "name": "debitis libero aspernatur",
                "position": 95788,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 41178,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Gracie",
              "fullName": "Gracie Weber",
              "id": "5",
              "lastName": "Weber",
              "picture": "velit eligendi nostrum",
              "relationshipType": "friend",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "repellendus fugiat velit",
                "id": "6",
                "name": "ipsam qui nobis",
                "position": 1828,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 3417,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Kali",
              "fullName": "Kali Stamm",
              "id": "7",
              "lastName": "Stamm",
              "picture": "fuga doloribus distinctio",
              "relationshipType": "neighbor",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "ducimus temporibus modi",
                "id": "8",
                "name": "placeat ullam minima",
                "position": 10322,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 7336,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Heather",
              "fullName": "Heather Hahn",
              "id": "9",
              "lastName": "Hahn",
              "picture": "totam voluptates explicabo",
              "relationshipType": "friend",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "sed magni cupiditate",
                "id": "10",
                "name": "exercitationem ut quis",
                "position": 1936,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 8362,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Marlene",
              "fullName": "Marlene Ledner",
              "id": "11",
              "lastName": "Ledner",
              "picture": "sint non voluptates",
              "relationshipType": "neighbor",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "qui illo error",
                "id": "12",
                "name": "ut ullam quos",
                "position": 57411,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 61393,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Connor",
              "fullName": "Connor Kihn",
              "id": "13",
              "lastName": "Kihn",
              "picture": "a officia quaerat",
              "relationshipType": "coworker",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "provident esse hic",
                "id": "14",
                "name": "cumque incidunt aut",
                "position": 69440,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 49305,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Shad",
              "fullName": "Shad Farrell",
              "id": "15",
              "lastName": "Farrell",
              "picture": "ut ab voluptas",
              "relationshipType": "friend",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "eos sint autem",
                "id": "16",
                "name": "sed quae nam",
                "position": 94459,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 2980,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Alek",
              "fullName": "Alek Lesch",
              "id": "17",
              "lastName": "Lesch",
              "picture": "aut ut ut",
              "relationshipType": "friend",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "saepe consequatur vel",
                "id": "18",
                "name": "eos ducimus eos",
                "position": 39767,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 53842,
                },
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <PersonItem
          person={
            Object {
              "__typename": "Person",
              "firstName": "Marco",
              "fullName": "Marco Volkman",
              "id": "19",
              "lastName": "Volkman",
              "picture": "et molestiae ea",
              "relationshipType": "coworker",
              "stage": Object {
                "__typename": "Stage",
                "iconUrl": "quidem est consequuntur",
                "id": "20",
                "name": "ut sunt placeat",
                "position": 88330,
              },
              "steps": Object {
                "__typename": "StepConnection",
                "pageInfo": Object {
                  "__typename": "BasePageInfo",
                  "totalCount": 69020,
                },
              },
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
